Return filter values by config
