# controllers/filter-controller.go
@@ -10,6 +10,7 @@ type FilterController interface {
 	GetProcedures(ctx *gin.Context)
 	GetStations(ctx *gin.Context)
 	GetVariables(ctx *gin.Context)
+	GetNodes(ctx *gin.Context)
 }
 
 type filterController struct {
@@ -21,11 +22,16 @@ type filterController struct {
 //		@Summary		Endpoint para obtener los procedimientos
 //		@Tags           Filtros
 //		@Produce		json
-//		@Success		200	{array} dtos.ProcedureFilter
+//	@Param          configurationId     query      int     true  "ID de la configuracion"
+//		@Success		200	{array} dtos.FilterValue
 //	    @Failure        400 {object} dtos.ErrorResponse
 //		@Router			/filtro/procedimientos [get]
 func (f filterController) GetProcedures(ctx *gin.Context) {
-	res := f.filterService.GetProcedures()
+	configurationId, done := getUintQueryParam(ctx, "configurationId")
+	if done {
+		return
+	}
+	res := f.filterService.GetProcedures(configurationId)
 	ctx.JSON(http.StatusOK, res)
 }
 
@@ -34,11 +40,16 @@ func (f filterController) GetProcedures(ctx *gin.Context) {
 //		@Summary		Endpoint para obtener las estaciones
 //		@Tags           Filtros
 //		@Produce		json
-//		@Success		200	{array} dtos.StationFilter
+//	@Param          configurationId     query      int     true  "ID de la configuracion"
+//		@Success		200	{array} dtos.FilterValue
 //	    @Failure        400 {object} dtos.ErrorResponse
 //		@Router			/filtro/estaciones [get]
 func (f filterController) GetStations(ctx *gin.Context) {
-	res := f.filterService.GetStations()
+	configurationId, done := getUintQueryParam(ctx, "configurationId")
+	if done {
+		return
+	}
+	res := f.filterService.GetStations(configurationId)
 	ctx.JSON(http.StatusOK, res)
 }
 
@@ -47,11 +58,34 @@ func (f filterController) GetStations(ctx *gin.Context) {
 //		@Summary		Endpoint para obtener las variables
 //		@Tags           Filtros
 //		@Produce		json
-//		@Success		200	{array} dtos.VariableFilter
+//	@Param          configurationId     query      int     true  "ID de la configuracion"
+//		@Success		200	{array} dtos.FilterValue
 //	    @Failure        400 {object} dtos.ErrorResponse
 //		@Router			/filtro/variables [get]
 func (f filterController) GetVariables(ctx *gin.Context) {
-	res := f.filterService.GetVariables()
+	configurationId, done := getUintQueryParam(ctx, "configurationId")
+	if done {
+		return
+	}
+	res := f.filterService.GetVariables(configurationId)
+	ctx.JSON(http.StatusOK, res)
+}
+
+// GetNodes godoc
+//
+//		@Summary		Endpoint para obtener los nodos
+//		@Tags           Filtros
+//		@Produce		json
+//	@Param          configurationId     query      int     true  "ID de la configuracion"
+//		@Success		200	{array} dtos.FilterValue
+//	    @Failure        400 {object} dtos.ErrorResponse
+//		@Router			/filtro/nodos [get]
+func (f filterController) GetNodes(ctx *gin.Context) {
+	configurationId, done := getUintQueryParam(ctx, "configurationId")
+	if done {
+		return
+	}
+	res := f.filterService.GetNodes(configurationId)
 	ctx.JSON(http.StatusOK, res)
 }
 
