# dtos/filter.go
@@ -1,6 +1,6 @@
 package dtos
 
-type StationFilter struct {
+type FilterValue struct {
 	Name string `gorm:"column:name" json:"Name"`
 	Id   uint64 `gorm:"column:id" json:"Id"`
 }
